# garmin-coach-llm

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  db_types.py  logging_config.py  logging_context.py  main.py
backend/app/models/: workout.py
backend/app/routers/: workouts.py
backend/app/schemas/: workout.py
backend/app/services/: garmin.py  garmin_format.py  llm.py  prompts.py
backend/tests/: test_api.py  test_workout_schema.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.js  App.tsx  index.css
frontend/src/api/: client.js  client.ts  format.js  format.ts  types.js  types.ts
frontend/src/components/: GarminWorkouts.tsx  RepeatBlockView.js  RepeatBlockView.tsx  SavedWorkouts.js  SavedWorkouts.tsx  StepCard.js  StepCard.tsx  TemplateGallery.tsx  Toasts.tsx
frontend/src/hooks/: useSidebarOpen.js  useSidebarOpen.ts  useToasts.ts
frontend/src/pages/: WorkoutBuilder.js  WorkoutBuilder.tsx
